--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Andrew Stavoli
-logo: /assets/1695560645726.jpg
+logo: /Assets/1695560645726.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
